# bignum

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
.github/workflows/: ccpp.yml
src/: bignum.cc  bignum.cpp  bignum.h  bits.h  bitvector.cpp  bitvector.h  hostint.h  wideint.h
tests/: bench_1.cpp  bench_bignum.cc  test_1.cpp  test_2.cpp  test_bignum.cc  test_wideint.cc
